--- a/Grid Example/index.html
+++ b/Grid Example/index.html
@@ -21,15 +21,20 @@
             <div class="item3"></div>
             <!-- <div class="item4">4</div> -->
             <div class="item5"></div>
+            
+            <div class="item6"></div>
+            <div class="item7"></div>
+            <div class="item8"></div>
+
         </div>
 
         <!-- This is a second sub container and it's child elements -->
 
-        <div class="container2">
+        <!-- <div class="container2">
             <div class="item6"></div>
             <div class="item7"></div>
             <div class="item8"></div>
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
